changing message values to use white-space: pre-wrap so they look correct in smaller spaces

--- a/client/styles/message.scss
+++ b/client/styles/message.scss
@@ -21,6 +21,6 @@
 	&-value {
 		color: #000;
 		display: block;
-		white-space: pre;
+		white-space: pre-wrap;
 	}
 }
